# dbscripts

./: .env-example  .envrc  .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  ChangeLog.md  README.md  dev-requirements.txt  project.md  pyproject.toml  requirements.txt
.github/workflows/: build  build.yml
dbscripts/: dbcreate.py  dblib.py  dbready.py  dbutil.py
scripts/: dbcreate.py
tests/: test_dblib.py
