[tool.poetry]
name = "dbscripts"
version = "2024.1.0"
description = "Collection of helper scripts for PostgreSQL"
authors = ["David Nugent <davidn@uniquode.io>"]
license = "MIT"
readme = "README.md"
classifiers = [
    "Topic :: Database :: Front-Ends",
    "Programming Language :: Python :: 3",
]

[tool.poetry.dependencies]
python = ">=3.10.0,<4.0.0"
envex = "^3.1"
psycopg = {extras = ["binary"], version = "^3.2"}

[tool.poetry.scripts]
dbutil = "dbscripts.dbutil:main"
dbready = "dbscripts.dbready:main"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3"
ruff = "^0.6.7"
testcontainers = "^4.8.1"

[tool.ruff]
namespace-packages = ["dbscripts"]

[tool.pytest.ini_options]
minversion = "7.2"
addopts = "-ra -q"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
