[project]
name = "dbscripts"
version = "2025.2.0"
description = "Collection of helper scripts for PostgreSQL"
authors = [
    {name = "David Nugent", email = "davidn@uniquode.io"}
]
license = {text = "MIT"}
readme = "README.md"
classifiers = [
    "Topic :: Database :: Front-Ends",
    "Programming Language :: Python :: 3",
]
requires-python = ">= 3.11"
dependencies = [
    "envex >= 4.0",
    "psycopg[binary] >= 3.2",
    "yarl>=1.18.3",
]

scripts = { dbutil = "dbscripts.dbutil:main", dbready = "dbscripts.dbready:main"}

[project.urls]
homepage = "https://github.com/deeprave/dbutils"
repository = "https://github.com/deeprave/dbutils"

[dependency-groups]
dev = [
    "pytest >= 8.3",
    "ruff >= 0.6.4",
    "testcontainers >= 4.8.1",
]
[tool.ruff]
namespace-packages = ["dbscripts"]

[tool.pytest.ini_options]
minversion = "7.2"
addopts = "-ra -q"

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"
