[project]
name = "dbscripts"
version = "2025.4.1"
description = "Collection of helper scripts for PostgreSQL"
authors = [
    {name = "David Nugent", email = "davidn@uniquode.io"}
]
license = {text = "MIT"}
readme = "README.md"
classifiers = [
    "Topic :: Database :: Front-Ends",
    "Programming Language :: Python :: 3",
]
requires-python = ">= 3.11"
dependencies = [
    "envex >= 4.2.0",
    "psycopg[binary] >= 3.3.4",
    "yarl>=1.24.5",
]

scripts = { dbutil = "dbscripts.dbutil:main", dbready = "dbscripts.dbready:main"}

[project.urls]
homepage = "https://github.com/deeprave/dbutils"
repository = "https://github.com/deeprave/dbutils"

[dependency-groups]
dev = [
    "pytest >= 9.0.3",
    "ruff >= 0.15.21",
    "testcontainers >= 4.14.2",
]
[tool.ruff]
namespace-packages = ["dbscripts"]

[tool.pytest.ini_options]
minversion = "7.2"
addopts = "-ra -q"

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"
